[metadata]
name = pysandboxtribp
version = 0.0.3-rc.1
author = trinamic_bp
author_email = benjamin.partzsch@maximintegrated.com
description = A small sandbox package
long_description = file: README.rst
url = https://github.com/trinamic-bp/pysandboxtribp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src